--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:mysql://remotemysql.com:3306/qwAF5hPnGn?autoReconnect=true&useSSL=false
+spring.datasource.username=qwAF5hPnGn
+spring.datasource.password=SOIz6Byrpe
