--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,11 @@ spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://remotemysql.com:3306/qwAF5hPnGn?autoReconnect=true&useSSL=false
 spring.datasource.username=qwAF5hPnGn
 spring.datasource.password=SOIz6Byrpe
+
+spring.mail.host=smtp.gmail.com
+spring.mail.username=iloveteatestmail
+spring.mail.password=kursspringboot123
+spring.mail.properties.mail.transport.protocol=smtp
+spring.mail.properties.mail.smtp.port=587
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
