Author: Arkadiusz Brych Description: https - repair

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,9 @@ spring.mail.properties.mail.transport.protocol=smtp
 spring.mail.properties.mail.smtp.port=587
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+server.port=443
+server.ssl.key-password=admin123
+server.ssl.key-store-password=admin123
+server.ssl.key-store=src/main/resources/keystore.jks
+server.ssl.key-store-type=pkcs12
